--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -120,6 +120,9 @@ on init
     chown wifi wifi /sys/module/wlan/parameters/fwpath
 
 on fs
+    wait /dev/block/platform/soc.0/${ro.boot.bootdevice}
+    symlink /dev/block/platform/soc.0/${ro.boot.bootdevice} /dev/block/bootdevice
+
     mount_all fstab.qcom
     mkdir /persist/data 0700 system system
     restorecon_recursive /persist
