--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -517,14 +517,12 @@ on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale  2
 
-service ril-daemon1 /system/bin/rild -c 2
+service ril-daemon2 /vendor/bin/hw/rild -c 2
     class main
-    socket rild2 stream 660 root radio
-    socket rild-debug2 stream 660 radio system
-    socket cutback stream 660 media radio
-    user root
+    user radio
     disabled
-    group radio cache inet misc audio sdcard_r sdcard_rw diag log
+    group radio cache inet misc audio log readproc wakelock
+    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service charger /charger
     class charger
@@ -620,6 +618,7 @@ service qcom-mem /system/bin/sh /system/etc/init.qcom.mem.sh
 
 on load_system_props_action
     start qcom-opengles
+
 
 
 
